--- a/pom.xml
+++ b/pom.xml
@@ -10,18 +10,24 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>lunch</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1</version>
 	<name>lunch</name>
 	<description>Demo project for Spring Boot</description>
+	<!-- 배포 형식 지정 -->
+	<packaging>jar</packaging>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-tomcat</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
