--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.servlet.context-path=/
 server.servlet.encoding.charset=UTF-8
 
 spring.devtools.livereload.enabled=true
+
+spring.thymeleaf.cache=false
