--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-server.port=7070
-
 server.servlet.context-path=/
 server.servlet.encoding.charset=UTF-8
 
-spring.devtools.livereload.enabled=true
-
 spring.thymeleaf.cache=false
+
+## MySQL Driver Configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## DB Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/lunch
+spring.datasource.username=study
+spring.datasource.password=study
+
+spring.devtools.livereload.enabled=true
